--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: 'Self-Supervised Exploration<br>via Latent Bayesian Surprise'
 description:
 - Pietro Mazzaglia, Ozan Catal, Tim Verbelen, Bart Dhoedt
 - Ghent University
-- 'Self-supervised Reinforcement Learning' workshop(ICLR 2021)
+- Self-supervised Reinforcement Learning workshop (ICLR 2021)
