Added Article PDF

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description:
 - Pietro Mazzaglia, Ozan Catal, Tim Verbelen, Bart Dhoedt<br>
 - Ghent University<br>
 - Self-supervision for Reinforcement Learning workshop (ICLR 2021)<br>
+buttons:
+  Full Article: 'https://arxiv.org/pdf/2104.07495.pdf'
