--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ description:
 buttons:
   Conference Paper: 'https://arxiv.org/abs/2104.07495'
   Workshop Paper: 'https://openreview.net/forum?id=PvTXy6DKvlh'
+google_analytics: G-DDG7GM42MN 
