--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ description:
 - Accepted to AAAI-22 (oral)<br>
 - Presented at Self-supervision for Reinforcement Learning workshop (ICLR 2021)<br>
 buttons:
-  Conference Paper: 'https://arxiv.org/abs/2104.07495'
-  Workshop Paper: 'https://openreview.net/forum?id=PvTXy6DKvlh'
+  Paper: 'https://arxiv.org/abs/2104.07495'
+  Code (for ICML 23 work): 'https://github.com/mazpie/mastering-urlb'
 google_analytics: G-DDG7GM42MN 
